# recap-demo-app

./: .env.example  .gitignore  README.md  pyproject.toml
src/: config.py  main.py
src/api/: auth_routes.py  rate_limiter.py  routes.py
src/auth/: middleware.py  oauth2.py  permission_service.py
src/ingestion/: pipeline.py  validators.py
src/storage/: connection_pool.py  query_cache.py  redis_limiter.py  snowflake_client.py
tests/: test_validators.py
